@@ -4,8 +4,9 @@ autoEM Changelog
 
 autoEM 0.2.1 (十一月 07, 2012):
 	Feature added:
-	* Complete basic add/remove workstation function
+	* Complete add/remove workstation function
 	* Complete about dialog
+	* Add temporary program logo
 
 autoEM 0.2.0 (十一月 03, 2012):
 	Feature added:
